--- a/bluebadgeclient/src/combo/combos.css
+++ b/bluebadgeclient/src/combo/combos.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     /* overflow: scroll; */
-    /* background-position:center; */
-    /* position: relative; */
+    background-attachment:fixed;
+    position: center;
     overflow-x: hidden;
 }
